convert-js-file-to-ts_add-tsconfig_install-gsap-and-pixi

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Game</title>
+    <title>Vault Safe Game</title>
     <style>
         body,
         html {
@@ -21,6 +21,6 @@
 
 <body>
 </body>
-<script src="js/script.js"></script>
+<script src="js/script1.js"></script>
 
 </html>
